--- a/packages/react-scripts-chrome-ext/package.json
+++ b/packages/react-scripts-chrome-ext/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kaltepeter/react-scripts",
+  "name": "@kaltepeter/react-scripts-chrome-ext",
   "version": "2.1.2",
   "description": "Custom: Configuration and scripts for Create React App.",
   "repository": "kaltepeter/create-react-app",
@@ -35,6 +35,7 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -69,6 +70,7 @@
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.9",
+    "webpack-dotenv-plugin": "^2.1.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
